<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ContatoActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="225dp"
        android:text="@string/contato1"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="271dp"
        android:text="@string/contato2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="275dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="-86dp"
        android:src="@drawable/detalhe_contato"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/nosso_contato"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="97dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="316dp"
        android:text="@string/contato3"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="333dp" />
</RelativeLayout>